# simple_cpp_library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scpp/: DynamicArray.h
tests/: CMakeLists.txt  main.cpp
